# python-project-52

./: .gitignore  Makefile  README.md  manage.py  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: sonarcloud.yml
core/: mixins.py  views.py
core/templates/: base.html  index.html
labels/: forms.py  models.py  tests.py  views.py
labels/migrations/: 0001_initial.py
labels/templates/labels/: create.html  update.html
locale/ru/LC_MESSAGES/: django.mo  django.po
statuses/: forms.py  models.py  tests.py  views.py
statuses/migrations/: 0001_initial.py  0002_alter_status_created_at_alter_status_name.py
statuses/templates/statuses/: create.html  delete.html  update.html
task_manager/: mixins.py  settings.py  urls.py  views.py
task_manager/labels/: tests.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: tests.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_status_created_at_alter_status_name.py
task_manager/tasks/: forms.py  models.py  tests.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_task_labels_alter_task_author_alter_task_created_at_and_more.py
task_manager/templates/: base.html  index.html
task_manager/users/: tests.py  views.py
task_manager/users/fixtures/: users.json
tasks/: forms.py  models.py  tests.py  views.py
tasks/migrations/: 0001_initial.py  0002_task_labels_alter_task_author_alter_task_created_at_and_more.py
tasks/templates/tasks/: detail.html  list.html
users/: forms.py  tests.py  views.py
(+14 files in other folders)
