[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dj-database-url>=3.1.0",
    "django>=6.0.1",
    "django-bootstrap5>=26.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "rollbar>=1.3.0",
    "coverage>=7.6.0",
]


[project.optional-dependencies]
dev = [
    "ruff>=0.14.14",
]


[tool.hatch.build.targets.wheel]
packages = ["task_manager", "core", "users", "statuses", "tasks", "labels"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
